--- a/pom.xml
+++ b/pom.xml
@@ -119,8 +119,8 @@
 				<version>5.2.1</version>
 				<configuration>
 					<url>jdbc:mysql://localhost:3306/geek_db?allowPublicKeyRetrieval=true</url>
-					<user>root</user>
-					<password>N1H4dg3q01</password>
+					<user>sa</user>
+					<password></password>
 					<schemas>
 						<schema>geek_db</schema>
 					</schemas>
